Complete auth implementation